--- a/views/hms_patient_views.xml
+++ b/views/hms_patient_views.xml
@@ -29,17 +29,26 @@
                     </group>
                     <group string="Medical Info">
                         <field name="blood_type"/>
-                        <field name="history"/>
-                        <field name="cr_ratio"/>
+                        <field name="history" invisible="age &lt; 50"/>
+                        <field name="cr_ratio" required="1"/>
                         <field name="pcr"/>
                         <field name="image"/>
                     </group>
                     <group string="Other Info">
-                        <field name="department_id"/>
+                        <field name="department_id" domain="[('is_opened','=',True)]"/>
                         <field name="department_capacity"/>
-                        <field name="doctor_id"/>
+                        <field name="doctor_id" readonly="not department_id"/>
                     </group>
                 </group>
+                <notebook>
+                    <page string="State Logs">
+                        <field name="state_log_ids">
+                            <list>
+                                <field name="description"/>
+                            </list>
+                        </field>
+                    </page>
+                </notebook>
             </form>
         </field>
     </record>
